--- a/maxnumet/build.gradle
+++ b/maxnumet/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
@@ -6,7 +6,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.dongdongwu.maxnumet"
+//        applicationId "com.dongdongwu.maxnumet"
         minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
