--- a/maxnumet/build.gradle
+++ b/maxnumet/build.gradle
@@ -23,34 +23,27 @@ android {
         }
     }
 
-    // 指定编码
-    tasks.withType(JavaCompile) {
-        options.encoding = "UTF-8"
-    }
-// 打包源码
+    //以下为配置library注释在打包jar后保留
+    // 打包源码jar
     task sourcesJar(type: Jar) {
         from android.sourceSets.main.java.srcDirs
         classifier = 'sources'
     }
-
     task javadoc(type: Javadoc) {
-        failOnError  false
+        failOnError false
         source = android.sourceSets.main.java.sourceFiles
         classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
         classpath += configurations.compile
     }
-
-// 制作文档(Javadoc)
+    // 打包文档jar
     task javadocJar(type: Jar, dependsOn: javadoc) {
         classifier = 'javadoc'
         from javadoc.destinationDir
     }
-
     artifacts {
         archives sourcesJar
         archives javadocJar
     }
-
 }
 
 dependencies {
