--- a/maxnumberet/build.gradle
+++ b/maxnumberet/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 34
@@ -30,10 +31,10 @@ android {
 
     //以下为配置library注释在打包jar后保留
     // 打包源码jar
-//    task sourcesJar(type: Jar) {
-//        from android.sourceSets.main.java.srcDirs
-//        classifier = 'sources'
-//    }
+    task sourcesJar(type: Jar) {
+        from android.sourceSets.main.java.srcDirs
+        classifier = 'sources'
+    }
 //    task javadoc(type: Javadoc) {
 //        failOnError false
 //        source = android.sourceSets.main.java.sourceFiles
