--- a/maxnumberet/build.gradle
+++ b/maxnumberet/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.github.jitpack:gradle-simple:1.0'
 }
