发布工具更换com.vanniktech.maven.publish

--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,12 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.2.0'
-        //
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+
+        // vanniktech 发布插件
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.26.0'
+        // Kotlin Javadoc，非必须
+        //classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.6.20"
+        // 最新版 1.7.10 和 0.21.0 组合有问题，应该是没兼容好。上面两个版本组合我验证过是可以的。
     }
 }
 
