--- a/maxnumberet/build.gradle
+++ b/maxnumberet/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'maven-publish'
-group = 'com.github.Thor-jelly'
+apply plugin: 'com.vanniktech.maven.publish'
 
 android {
     compileSdkVersion 34
@@ -29,33 +28,10 @@ android {
 //        jvmTarget = JavaVersion.VERSION_17
 //    }
     namespace 'com.jelly.thor.maxnumberet'
-
-    //以下为配置library注释在打包jar后保留
-    // 打包源码jar
-//    task sourcesJar(type: Jar) {
-//        from android.sourceSets.main.java.srcDirs
-//        classifier = 'sources'
-//    }
-//    task javadoc(type: Javadoc) {
-//        failOnError false
-//        source = android.sourceSets.main.java.sourceFiles
-//        classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-//        classpath += configurations.compile
-//    }
-//    // 打包文档jar
-//    task javadocJar(type: Jar, dependsOn: javadoc) {
-//        classifier = 'javadoc'
-//        from javadoc.destinationDir
-//    }
-//    artifacts {
-//        archives sourcesJar
-//        archives javadocJar
-//    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.github.jitpack:gradle-simple:1.0'
 }
